sdk/ionic-legacy/2.0/calling-direct-calling.mdx
---
title: "Direct Calling"
---

<Warning>
**Deprecated:** The Ionic Cordova SDK is deprecated. For new Ionic/Cordova applications, please use the [JavaScript SDK](/sdk/javascript/overview) which provides full compatibility with Ionic applications.
</Warning>



This section will guide you to start the call/conference directly with the session id of your choice. The session id is the most important parameter as all the users joining the same session id will be connected to the same call/conference.

## Implementation

The most important class that will be used in the implementation is the `CallSettings` class. This class allows you to set the various parameters for the call/conference. In order to set the various parameters of the `CallSettings` class, you need to use the `CallSettingsBuilder` class. Below are the various options available with the `CallSettings` class.

The mandatory parameter is the sessionId for the call/conference. You can use the setSessionId() method of the `CallSettingsBuilder` to set the session Id of the call.

A basic example of how to start a direct call:

<Tabs>
<Tab title="JavaScript">
```js
let sessionID = "SESSION_ID";
let audioOnly = false;
let deafaultLayout = true;
let callListener = new CometChat.OngoingCallListener({
	onUserListUpdated: userList => {
  		console.log("user list:", userList);
  },
  onCallEnded: call => {
    console.log("Call ended:", call);
  },
  onAudioModesUpdated: (audioModes) => {
      console.log("audio modes:", audioModes);
  }
});

let callSettings = new CometChat.CallSettingsBuilder()
                  .enableDefaultLayout(deafaultLayout)
                  .setSessionID(sessionID)
                  .setIsAudioOnlyCall(audioOnly)
                  .setCallEventListener(callListener)
                  .build();

CometChat.startCall(callSettings);
```

</Tab>

</Tabs>

The `setAudioOnlyCall()` method allows you to set if the call is supposed to be an audio call or an audio-video call. If set to true, the call will be an audio-only call else when set to false the call will be an audio-video call. The default is false, so if not set, the call will be an audio-video call.

## Settings

The `CallSettings` class is the most important class when it comes to the implementation of the Calling feature. This is the class that allows you to customize the overall calling experience. The properties for the call/conference can be set using the `CallSettingsBuilder` class. This will eventually give you and object of the `CallSettings` class which you can pass to the `startCall()` method to start the call.

The **mandatory** parameters that are required to be present for any call/conference to work are:

1. sessionId - The unique session Id for the call/conference session.

The options available for customization of calls are:

| Setting                                                   | Description                                                                                                                                                                                                                                                                                                 |
| --------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `enableDefaultLayout(defaultLayout: boolean)`             | If set to `true` enables the default layout for handling the call operations. <br/>If set to `false` it hides the button layout and just displays the Call View. <br/>**Default value = true**                                                                                                                        |
| `showEndCallButton(showEndCallButton: boolean)`           | If set to `true` it displays the EndCallButton in Button Layout. <br/>if set to `false` it hides the EndCallButton in Button Layout. <br/>**Default value = true**                                                                                                                                                    |
| `showPauseVideoButton(showPauseVideoButton: boolean)`     | If set to `true` it displays the PauseVideoButton in Button Layout. <br/>if set to `false` it hides the PauseVideoButton in Button Layout. <br/>**Default value = true**                                                                                                                                              |
| `showMuteAudioButton(showMuteAudioButton: boolean)`       | If set to `true` it displays the MuteAudioButton in Button Layout. <br/>if set to `false` it hides the MuteAudioButton in Button Layout. <br/>**Default value = true**                                                                                                                                                |
| `showSwitchCameraButton(showSwitchCameraButton: boolean)` | If set to `true` it displays the SwitchCameraButton in Button Layout. <br/>if set to `false` it hides the SwitchCameraButton in Button Layout. <br/>**Default value = true**                                                                                                                                          |
| `showAudioModeButton(showAudioModeButton: boolean)`       | If set to `true` it displays the AudioModeButton in Button Layout. <br/>if set to `false` it hides the AudioModeButton in Button Layout. <br/>**Default value = true**                                                                                                                                                |
| `setIsAudioOnlyCall(audioOnly: boolean)`                  | If set to true, the call will be strictly an audio call. <br/>If ser to false, the call will be an audio-video call. <br/>**Default value = false**                                                                                                                                                                   |
| `setMode(mode: string)`                                   | CometChat provides 3 options for the calling UI. <br/>1. CometChat.CALL\_MODE.DEFAULT <br/>2. CometChat.CALL\_MODE.SPOTLIGHT <br/>3. CometChat.CALL\_MODE.SINGLE <br/>**Default value = CometChat.CALL\_MODE.DEFAULT**                                                                                                          |
| `startWithAudioMuted(audioMuted: boolean)`                | This ensures the call is started with the audio muted if set to true.<br/> **Default value = false**                                                                                                                                                                                                             |
| `startWithVideoMuted(videoMuted: boolean)`                | This ensures the call is started with the video paused if set to true. <br/>**Default value = false**                                                                                                                                                                                                            |
| `setDefaultAudioMode(audioMode: string)`                  | This method can be used if you wish to start the call with a specific audio mode. The available options are <br/>1. CometChat.AUDIO\_MODE.SPEAKER = "SPEAKER" <br/>2. CometChat.AUDIO\_MODE.EARPIECE = "EARPIECE" <br/>3. CometChat.AUDIO\_MODE.BLUETOOTH = "BLUETOOTH" <br/>4. CometChat.AUDIO\_MODE.HEADPHONES = "HEADPHONES" |

<Warning>

The `CometChat.getActiveCall()` method in case of Direct Calling will return null and all the details related to the call session will have to be saved and maintained at your end.

</Warning>

## Call Participant Count

In order to get the number of participants in any call, you can use the `getCallParticipantCount()` method. This method takes the session id for the call and returns the number or participants that are active in the call.

<Tabs>
<Tab title="JavaScript">
```js
let sessionId = "CALL_SESSION_ID";
let callType = "DIRECT";

CometChat.getCallParticipantCount(sessionId, callType).then(
  count => {
  	console.log("Participants count =", count);
  }, error => {
  	console.log("Some error occurred =", error);
  }
); 
```

</Tab>

</Tabs>
